--- a/src/main/webapp/WEB-INF/templates/layout-admin.xhtml
+++ b/src/main/webapp/WEB-INF/templates/layout-admin.xhtml
@@ -2,8 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:h="http://xmlns.jcp.org/jsf/html"
 	  xmlns:f="http://xmlns.jcp.org/jsf/core"
-	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	  xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
+	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 	
 <h:head>  
 	<meta charset="utf-8" />
@@ -141,6 +140,12 @@
 			<ui:insert name="content">
 			
 			</ui:insert>
+			
+			<div class="main__footer">
+				<div role="contentinfo" aria-label="Rodapé">
+					<p class="copyright-text">Todos os direitos reservados Casa do Código</p>
+				</div>
+			</div>
 		</div>
 	</div>
 </h:body>  
