--- a/src/main/webapp/resources/css/application.css
+++ b/src/main/webapp/resources/css/application.css
@@ -904,7 +904,6 @@ body {
 		width: 52%;
 		width: 52%;
 		padding-right: 6%;
-		float: left
 	}
 }
 
@@ -3250,7 +3249,16 @@ em
 
 .main__footer {
 	padding: 1em 0;
-	border-top: 1px solid #e6e6e6
+	border-top: 1px solid #e6e6e6;
+	margin-top: 40px;
+}
+
+.button__footer {
+	margin-top: 30px;
+}
+
+.button__footer a {
+	margin-left:10px;
 }
 
 .copyright-text {
