--- a/src/main/webapp/resources/css/application.css
+++ b/src/main/webapp/resources/css/application.css
@@ -6626,4 +6626,32 @@ opacity
     transition: all 0.2s ease-in-out 0.1s;
     opacity: 0;
 }
+/* TABLE */
+.cdc-table {
+	background-color: #F2F0EE;
+    text-align: center;
+    width: 100%;
+}
+.cdc-table thead {
+	background-color: #E4E1DE;
+    border-bottom: 1px solid #D5D3D1;
+    padding-bottom: .35em;
+    margin-bottom: .6em;
+    font-family: "open-sans", sans-serif;
+    font-size: .9em;
+    font-weight: 700;
+}
+.cdc-table th {
+	padding: .5em 0;
+	text-align: center;
+	font-size: 14px;
+	font-weight: 600;
+}
+.cdc-table td {
+	font-size: 14px;
+    padding: 8px;
+    text-align: center;
+}
+
+
 
